--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,6 +1,8 @@
 h1
   | Address book
 
+= link_to 'Add new address', new_user_path
+
 table.table
   thead
     tr
@@ -24,7 +26,7 @@ table.table
         td
           = user.phone_numbers.join(', ')
         td
-          = link_to 'Edit', edit_users_path(user)
-          = link_to 'Show', users_path(user)
-          = link_to 'Delete', users_path(user), method: :destroy, data: { confirm: 'Are you sure?' }
+          = link_to 'Edit', edit_user_path(id: user.id)
+          /= link_to 'Show', user_path(id: user.id)
+          /= link_to 'Delete', user_path(id: user.id), method: :destroy, data: { confirm: 'Are you sure?' }
 
