--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -16,7 +16,7 @@ h1
         label
           ' Email
           = index + 1
-        = email_field_tag 'user[emails][]', email
+        = text_field_tag 'user[emails][]', email, formnovalidate: true
 
   .phone_number_fields
     - @user.phone_numbers.each_with_index do |phone_number, index|
@@ -24,7 +24,7 @@ h1
         label
           ' Phone number
           = index + 1
-        = phone_field_tag 'user[phone_numbers][]', phone_number
+        = text_field_tag 'user[phone_numbers][]', phone_number
         = link_to 'Remove', '#', class: 'remove_phone_number_field'
 
   = f.submit 'Save'
@@ -34,7 +34,7 @@ script#template_phone_number
     label
       ' Phone number
       | <%= index %>
-    = phone_field_tag 'user[phone_numbers][]', ''
+    = text_field_tag 'user[phone_numbers][]', ''
     = link_to 'Remove', '#', class: 'remove_phone_number_field'
 
 script#template_actions_for_phone_number
@@ -45,7 +45,7 @@ script#template_email
     label
       ' Email
       | <%= index %>
-    = phone_field_tag 'user[emails][]', ''
+    = text_field_tag 'user[emails][]', ''
     = link_to 'Remove', '#', class: 'remove_email_field'
 
 script#template_actions_for_email
